[package]
name = "gen"
version = "0.1.0"
edition = "2021"

[features]
benchmark=[]

[dependencies]
cached = "0.54.0"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
convert_case = "0.6.0"
csv = "1.3.0"
fallible-streaming-iterator = "0.1.9"
include_dir = "0.7.4"
intervaltree = "0.2.7"
itertools = "0.13.0"
lexical-core = "1.0.2"
noodles = { version = "0.85.0", features = ["async", "bgzf", "core", "fasta", "gff", "vcf"] }
petgraph = "0.6.5"
remove_dir_all = "1.0.0"
rusqlite = { version = "0.32.1", features = ["bundled", "array", "session"] }
rusqlite_migration = { version = "1.3.1" , features = ["from-directory"]}
ruzstd = "0.7.3"
serde = {  version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tempfile = "3.14.0"
interavl = "0.2.0"
regex = "1.11.1"
flate2 = "1.0.35"
gb-io = "0.7.1"
thiserror = "1.0.69"
indicatif = "0.17.9"
html-escape = "0.2.13"
bs58 = "0.5.1"

[dev-dependencies]
cargo-llvm-cov = "0.6.14"
cargo-deny = "0.16.2"
