[package]
name = "gen"
description = "A sequence graph and version control system."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ginkgobioworks/gen"
homepage = "https://genhub.bio"
license = "Apache-2.0"
include = ["/src", "LICENSE", "migrations"]

# Add this section for Python bindings
[lib]
name = "gen"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "gen"
path = "src/main.rs"

[features]
benchmark = []
# Add a new feature for Python bindings
python-bindings = ["pyo3"]
# Make default features not include python-bindings
default = []

[dependencies]
cached = "0.54.0"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
convert_case = "0.6.0"
csv = "1.3.0"
fallible-streaming-iterator = "0.1.9"
include_dir = "0.7.4"
intervaltree = "0.2.7"
itertools = "0.13.0"
lexical-core = "1.0.2"
noodles = { version = "0.85.0", features = ["async", "bgzf", "core", "fasta", "gff", "vcf"] }
petgraph = "0.6.5"
remove_dir_all = "1.0.0"
rusqlite = { version = "0.32.1", features = ["bundled", "array", "session"] }
rusqlite_migration = { version = "1.3.1" , features = ["from-directory"]}
ruzstd = "0.7.3"
serde = {  version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tempfile = "3.14.0"
interavl = "0.2.0"
regex = "1.11.1"
flate2 = "1.0.35"
gb-io = "0.7.1"
thiserror = "1.0.69"
indicatif = "0.17.9"
html-escape = "0.2.13"
rust-sugiyama = {git = "https://github.com/paddison/rust-sugiyama", rev = "4d15b35124adac1de3a3b2cc42af8d68290935f2" }
ratatui = "0.29.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
log = "0.4.25"
env_logger = "0.11.6"
tui-textarea = "0.7.0"
tui-widget-list = "0.13.2"
# Add PyO3 dependency for Python bindings, but make it optional
pyo3 = { version = "0.20.2", features = ["extension-module", "abi3-py38", "auto-initialize", "multiple-pymethods"], optional = true }

[dev-dependencies]
cargo-llvm-cov = "0.6.14"
cargo-deny = "0.16.4"
maturin = "1.5.1"
