[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "gen"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
description = "Python bindings for the Gen graph database"
readme = "README.md"

[tool.maturin]
features = ["python-bindings"]
python-source = "python"
module-name = "gen.gen" # TODO: pick a name available on pypi
crate-type = ["cdylib"]  # Specify the crate-type for Python bindings

# Add this section to better handle mixed Rust targets
# Instead of specifying platform-specific settings, use more generic ones
[tool.maturin.target.'cfg(unix)']
rustc-link-lib = ["python3.8"] 